Initial release of transaction form Minor updates to Company Form

--- a/companyEnrolInternal.html
+++ b/companyEnrolInternal.html
@@ -86,7 +86,7 @@
     <div>
         <ng-form id="reg-company-form" name="main.companyEnrolForm" ng-controller="MainController as main"
                  novalidate="novalidate"
-                 ng-init="main.initUser('EXT')">
+                 ng-init="main.initUser('INT')">
             <section class="panel panel-primary mrgn-tp-lg">
                 <header class="panel-heading">
                     <h2 class="panel-title">Load a Draft Company Enrolment File</h2>
