--- a/index.html
+++ b/index.html
@@ -13,25 +13,33 @@
     </div>
     <div>
         <h2> External User Links</h2>
-        <a href="companyEnrol.html">Company Enrolment -External (Aug 16)</a>
+        <div class="row">
+        <a href="companyEnrol.html">Company Enrolment -External (Aug 23)</a>
+        </div >
+        <div class="row">
+        <a href="transactionEnrol.html">Transaction Enrolment -External (Aug 23)</a>
+        </div>
     </div>
     <div>
         <h2>Internal User (i.e. HPFB) Links</h2>
         <row>
-            <a href="index_internal.html">Company Enrolment -Internal (Aug 16)</a>
+            <a href="CompanyEnrolInternal.html">Company Enrolment -Internal (Aug 23)</a>
         </row>
     </div>
     <div>
         <row>
             <h2>Summary of Changes For Company Enrolment</h2>
             <ul>
-                <li>Completed validation for the form</li>
-                <li>Completed business rules for the internal version of the form</li>
-                <li>Numerous bug fixes to UI behaviour</li>
-                <li>Changed draft file type to 'hcsc'</li>
+                <li>Minor label changes</li>
+                <li>Address Mandatory field validation bug fixes</li>
             </ul>
         </row>
-
+        <row>
+            <h2>Summary of Changes For Transaction Enrolment</h2>
+            <ul>
+                <li>Initial commit. Stable version of form</li>
+            </ul>
+        </row>
     </div>
 
 </div>
