Initial activity enrolment checkin. Very minor updates to other forms

--- a/index.html
+++ b/index.html
@@ -14,30 +14,39 @@
     <div>
         <h2> External User Links</h2>
         <div class="row">
-        <a href="companyEnrol.html">Company Enrolment -External (Aug 23)</a>
-        </div >
-        <div class="row">
-        <a href="transactionEnrol.html">Transaction Enrolment -External (Aug 23)</a>
+            <a href="companyEnrol.html">Company Enrolment -External (Aug 23)</a>
         </div>
+        <div class="row">
+            <a href="transactionEnrol.html">Transaction Enrolment -External (Aug 23)</a>
+        </div>
+        <div class="row">
+            <a href="activityEnrol.html">Activity Enrolment -External (Sept 7)</a>
+        </div>
+
     </div>
     <div>
         <h2>Internal User (i.e. HPFB) Links</h2>
-        <row>
+        <div class="row">
             <a href="CompanyEnrolInternal.html">Company Enrolment -Internal (Aug 23)</a>
-        </row>
+        </div>
+
+        <div class="row">
+            <a href="activityEnrolInternal.html">Activity Enrolment -Internal (Sept 7)</a>
+        </div>
     </div>
     <div>
         <row>
-            <h2>Summary of Changes For Company Enrolment</h2>
+            <h2>Summary of Changes For Activity Enrolment</h2>
             <ul>
-                <li>Minor label changes</li>
-                <li>Address Mandatory field validation bug fixes</li>
+                <li>Initial release. Can round trip data between internal/ external forms</li>
+                <li>No amend checkboxes implemented in this release</li>
             </ul>
         </row>
+
         <row>
             <h2>Summary of Changes For Transaction Enrolment</h2>
             <ul>
-                <li>Initial commit. Stable version of form</li>
+                <li>Minor changes- changes to transction list order</li>
             </ul>
         </row>
     </div>
