--- a/companyEnrolInternal.html
+++ b/companyEnrolInternal.html
@@ -106,9 +106,12 @@
                         <h3 class="panel-title">Regulatory Company Enrolment</h3>
                     </header>
                     <div class="panel-body">
-                        <div class="row">
+
+                        <cmp-application-info record="main.company" user-type="main.userType" is-incomplete="main.isIncomplete"
+                        configure-id-field="main.configCompany"></cmp-application-info>
+                      <!--  <div class="row">
                             <div class="col-xs-3 form-group">
-                                <label for="application-type">{{"APPL_TYPE"| translate}}</label>
+                                <label for="application-type">{{"APPL_STATUS"| translate}}</label>
                                 <select id="application-type"
                                         ng-options="type |translate for type in main.applTypes"
                                         ng-model="main.company.applicationType" ng-readonly="true"
@@ -149,6 +152,7 @@
                                 </button>
                             </div>
                         </div>
+                        -->
                     </div>
 
                     <div>
@@ -258,6 +262,7 @@
 <script src="app/lib/angular-messages.min.js"></script>
 <script src="app/lib/angular-translate.min.js"></script>
 <script src="app/lib/angular-translate-loader-static-files.min.js"></script>
+<script src="app/lib/angular-sanitize.min.js"></script>
 
 <script src="app/lib/angular-aria.min.js"></script>
 <script src="app/scripts/app.js"></script>
@@ -272,7 +277,7 @@
 <script src="app/scripts/components/addressList/cmp-company-address-list.js"></script>
 <script src="app/scripts/components/addressRecord/cmp-address-record.js"></script>
 <script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
-
+<script src="app/scripts/components/applicationInfo/cmp-application-info.js"></script>
 
 <script src="app/scripts/components/contactRecord/cmp-contact-record.js"></script>
 <script src="app/scripts/components/contactList/cmp-company-contact-list.js"></script>
