--- a/index-fr.html
+++ b/index-fr.html
@@ -61,7 +61,7 @@
 </ul>
 <header role="banner">
     <div id="wb-bnr" class="container">
-        <!--<section id="wb-lng" class="visible-md visible-lg text-right">
+        <section id="wb-lng" class="visible-md visible-lg text-right">
         <h2 class="wb-inv">Sélection de la langue</h2>
         <div class="row">
         <div class="col-md-12">
@@ -70,7 +70,7 @@
         </ul>
         </div>
         </div>
-        </section>-->
+        </section>
         <div class="row">
             <div class="brand col-xs-8 col-sm-9 col-md-6">
                 <a href="http://www.canada.ca/fr/index.html">
