--- a/index-fr.html
+++ b/index-fr.html
@@ -66,7 +66,7 @@
         <div class="row">
         <div class="col-md-12">
         <ul class="list-inline margin-bottom-none">
-        <li><a lang="en" href="content-en.html">English</a></li>
+        <li><a lang="en" href="index.html">English</a></li>
         </ul>
         </div>
         </div>
