--- a/index-fr.html
+++ b/index-fr.html
@@ -61,16 +61,16 @@
 </ul>
 <header role="banner">
     <div id="wb-bnr" class="container">
-        <section id="wb-lng" class="visible-md visible-lg text-right">
+        <!--<section id="wb-lng" class="visible-md visible-lg text-right">
         <h2 class="wb-inv">Sélection de la langue</h2>
         <div class="row">
         <div class="col-md-12">
         <ul class="list-inline margin-bottom-none">
-        <li><a lang="en" href="index.html">English</a></li>
+        <li><a lang="en" href="content-en.html">English</a></li>
         </ul>
         </div>
         </div>
-        </section>
+        </section>-->
         <div class="row">
             <div class="brand col-xs-8 col-sm-9 col-md-6">
                 <a href="http://www.canada.ca/fr/index.html">
@@ -140,38 +140,39 @@
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont">fr_Regulatory Enrolment Process French Forms</h1>
+        <h1 property="name" id="wb-cont"> Regulatory Enrolment Process Last Deployed: Sept 16 </h1>
         <div>
             <h2> External User Links</h2>
             <div class="row">
-                <a href="companyEnrolEXT-fr.html">Company Enrolment -External (Sept 14)</a>
+                <a href="companyEnrolEXT-en.html">Company Enrolment -External</a>
             </div>
             <div class="row">
-                <a href="transactionEnrol-fr.html">Transaction Enrolment -External (Sept 14)</a>
+                <a href="transactionEnrol-en.html">Transaction Enrolment -External</a>
             </div>
             <div class="row">
-                <a href="activityEnrolEXT-fr.html">Activity Enrolment -External (Sept 14)</a>
+                <a href="activityEnrolEXT-en.html">Activity Enrolment -External</a>
             </div>
-
         </div>
         <div>
             <h2>Internal User (i.e. HPFB) Links</h2>
             <div class="row">
-                <a href="companyEnrolINT-fr.html">Company Enrolment -Internal ((Sept 14))</a>
+                <a href="companyEnrolINT-en.html">Company Enrolment -Internal </a>
             </div>
+
             <div class="row">
-                <a href="activityEnrolINT-fr.html">Activity Enrolment -Internal ((Sept 14))</a>
+                <a href="activityEnrolINT-en.html">Activity Enrolment -Internal</a>
             </div>
         </div>
         <div>
             <row>
                 <h2>Summary of changes</h2>
                 <ul>
-                    <li>Template updates</li>
-                    <li>Activity Form -amendment checkboxes</li>
-                    <li>Index Page - french/ English links available. French views of forms available</li>
-                    <li>Company- UI fixes and business logic fixes (importer bug)</li>
-                    <li>Transaction- UI fixes and business logic fixes (lifecycle bug)</li>
+                    <li>Added File naming conventions</li>
+                    <li>Activity Form External: added Help page links (demo)</li>
+                    <li>Fixes to amendment behavior (company and Activity)</li>
+                    <li>Fix to xml generation, internal Activity Form </li>
+                    <li>Company Form: Fix to duplicate role Validation </li>
+                    <li>Company Form: Fix to country validation visibility behaviour</li>
                 </ul>
             </row>
         </div>
