--- a/activityEnrolEXT-en.html
+++ b/activityEnrolEXT-en.html
@@ -158,7 +158,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-20 </time>
+                <time property="dateModified">2016-09-27 </time>
             </dd>
         </dl>
     </div>
@@ -225,6 +225,12 @@
 
 <!-- inject:js -->
 
+<script src="app/lib/xml2json.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/FileSaver.min.js"></script>
+
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -245,6 +251,8 @@
 
 <script src="app/scripts/activityAppEXT-en.js"></script>
 
+<script src="app/scripts/services/rep-contact-service.js"></script>
+
 <script src="app/scripts/services/filter-lists.js"></script>
 
 <script src="app/scripts/services/data-lists.js"></script>
@@ -261,8 +269,6 @@
 
 <script src="app/scripts/components/rep-contact-record/cmp-rep-contact-record.js"></script>
 
-<script src="app/scripts/components/relatedActivity/cmp-related-activity.js"></script>
-
 <script src="app/scripts/components/relatedActivityList/cmp-related-activity-list.js"></script>
 
 <script src="app/scripts/components/fileIO/xml2json.js"></script>
@@ -272,6 +278,8 @@
 <script src="app/scripts/components/fileIO/FileSaver.min.js"></script>
 
 <script src="app/scripts/components/fileIO/FileIO.hpfbFileReader.js"></script>
+
+<script src="app/scripts/components/relatedActivity/cmp-related-activity.js"></script>
 
 <script src="app/scripts/components/expandingTable/cmp-expanding-table.js"></script>
 
