--- a/dossier/dossierEnrolEXT-fr.html
+++ b/dossier/dossierEnrolEXT-fr.html
@@ -157,7 +157,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-20 </time>
+                <time property="dateModified">2016-09-26 </time>
             </dd>
         </dl>
     </div>
@@ -228,6 +228,12 @@
 
 <!-- inject:js -->
 
+<script src="app/lib/xml2json.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/FileSaver.min.js"></script>
+
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -248,6 +254,8 @@
 
 <script src="app/dossierAppEXT-fr.js"></script>
 
+<script src="app/services/rep-contact-service.js"></script>
+
 <script src="app/services/filter-lists.js"></script>
 
 <script src="app/components/dossier/cmp-dossier.js"></script>
@@ -258,6 +266,8 @@
 
 <script src="app/services/data-lists.js"></script>
 
+<script src="app/services/application-info-service.js"></script>
+
 <script src="app/components/therapeutic-classification/cmp-therapeutic-class.js"></script>
 
 <script src="app/components/tabs/cmp-tabs.js"></script>
@@ -265,6 +275,32 @@
 <script src="app/components/tabs/cmp-tab.js"></script>
 
 <script src="app/components/schedule-a/cmp-schedule-a.js"></script>
+
+<script src="app/components/repContactList/cmp-rep-contact-list.js"></script>
+
+<script src="app/components/rep-contact-record/cmp-rep-contact-record.js"></script>
+
+<script src="app/components/formulations/cmp-route-of-admin.js"></script>
+
+<script src="app/components/formulations/cmp-non-med-ing-record.js"></script>
+
+<script src="app/components/formulations/cmp-non-med-ing-list.js"></script>
+
+<script src="app/components/formulations/cmp-material-ing-record.js"></script>
+
+<script src="app/components/formulations/cmp-material-ing-list.js"></script>
+
+<script src="app/components/formulations/cmp-formulations.js"></script>
+
+<script src="app/components/formulations/cmp-formulation-record.js"></script>
+
+<script src="app/components/formulations/cmp-container-type-record.js"></script>
+
+<script src="app/components/formulations/cmp-container-type-list.js"></script>
+
+<script src="app/components/formulations/cmp-active-ing-record.js"></script>
+
+<script src="app/components/formulations/cmp-active-ing-list.js"></script>
 
 <script src="app/components/fileIO/xml2json.js"></script>
 
@@ -277,6 +313,8 @@
 <script src="app/components/expanding-table/cmp-expanding-table.js"></script>
 
 <script src="app/components/drug-use/cmp-drug-use.js"></script>
+
+<script src="app/components/contactDetails/cmp-contact-details.js"></script>
 
 <script src="app/components/contact/cmp-contact-record.js"></script>
 
@@ -291,6 +329,8 @@
 <script src="app/components/can-ref-products/cmp-ref-product-list.js"></script>
 
 <script src="app/components/can-ref-products/cmp-ref-product-details.js"></script>
+
+<script src="app/components/applicationInfo/cmp-application-info.js"></script>
 
 <script src="app/components/appendix-four/cmp-tissues-fluids-origin.js"></script>
 
