--- a/dossier/dossierEnrolINT-en.html
+++ b/dossier/dossierEnrolINT-en.html
@@ -159,7 +159,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-20 </time>
+                <time property="dateModified">2016-09-26 </time>
             </dd>
         </dl>
     </div>
@@ -226,6 +226,12 @@
 
 <!-- inject:js -->
 
+<script src="app/lib/xml2json.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/FileSaver.min.js"></script>
+
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -246,6 +252,8 @@
 
 <script src="app/dossierAppINT-en.js"></script>
 
+<script src="app/services/rep-contact-service.js"></script>
+
 <script src="app/services/filter-lists.js"></script>
 
 <script src="app/components/dossier/cmp-dossier.js"></script>
@@ -256,6 +264,8 @@
 
 <script src="app/services/data-lists.js"></script>
 
+<script src="app/services/application-info-service.js"></script>
+
 <script src="app/components/therapeutic-classification/cmp-therapeutic-class.js"></script>
 
 <script src="app/components/tabs/cmp-tabs.js"></script>
@@ -263,6 +273,32 @@
 <script src="app/components/tabs/cmp-tab.js"></script>
 
 <script src="app/components/schedule-a/cmp-schedule-a.js"></script>
+
+<script src="app/components/repContactList/cmp-rep-contact-list.js"></script>
+
+<script src="app/components/rep-contact-record/cmp-rep-contact-record.js"></script>
+
+<script src="app/components/formulations/cmp-route-of-admin.js"></script>
+
+<script src="app/components/formulations/cmp-non-med-ing-record.js"></script>
+
+<script src="app/components/formulations/cmp-non-med-ing-list.js"></script>
+
+<script src="app/components/formulations/cmp-material-ing-record.js"></script>
+
+<script src="app/components/formulations/cmp-material-ing-list.js"></script>
+
+<script src="app/components/formulations/cmp-formulations.js"></script>
+
+<script src="app/components/formulations/cmp-formulation-record.js"></script>
+
+<script src="app/components/formulations/cmp-container-type-record.js"></script>
+
+<script src="app/components/formulations/cmp-container-type-list.js"></script>
+
+<script src="app/components/formulations/cmp-active-ing-record.js"></script>
+
+<script src="app/components/formulations/cmp-active-ing-list.js"></script>
 
 <script src="app/components/fileIO/xml2json.js"></script>
 
@@ -275,6 +311,8 @@
 <script src="app/components/expanding-table/cmp-expanding-table.js"></script>
 
 <script src="app/components/drug-use/cmp-drug-use.js"></script>
+
+<script src="app/components/contactDetails/cmp-contact-details.js"></script>
 
 <script src="app/components/contact/cmp-contact-record.js"></script>
 
@@ -289,6 +327,8 @@
 <script src="app/components/can-ref-products/cmp-ref-product-list.js"></script>
 
 <script src="app/components/can-ref-products/cmp-ref-product-details.js"></script>
+
+<script src="app/components/applicationInfo/cmp-application-info.js"></script>
 
 <script src="app/components/appendix-four/cmp-tissues-fluids-origin.js"></script>
 
