--- a/index.html
+++ b/index.html
@@ -142,48 +142,41 @@
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont"> Regulatory Enrolment Process Last Deployed: Sept 16 </h1>
+        <h1 property="name" id="wb-cont"> Regulatory Enrolment Process </h1>
         <div>
             <h2> External User Links</h2>
             <div class="row">
-                <a href="companyEnrolEXT-en.html">Company Enrolment -External</a>
+                <a href="companyEnrolEXT-en.html">Company Enrolment -External (Sept 16)</a>
             </div>
             <div class="row">
-                <a href="transactionEnrol-en.html">Transaction Enrolment -External</a>
+                <a href="transactionEnrol-en.html">Transaction Enrolment -External (sept 27)</a>
             </div>
             <div class="row">
-                <a href="activityEnrolEXT-en.html">Activity Enrolment -External</a>
+                <a href="activityEnrolEXT-en.html">Activity Enrolment -External (Sept 16)</a>
             </div>
             <div class="row">
-                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Sept 20)</a>
+                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Sept 27)</a>
             </div>
 
         </div>
         <div>
             <h2>Internal User (i.e. HPFB) Links</h2>
             <div class="row">
-                <a href="companyEnrolINT-en.html">Company Enrolment -Internal </a>
+                <a href="companyEnrolINT-en.html">Company Enrolment -Internal (Sept 16) </a>
             </div>
 
             <div class="row">
-                <a href="activityEnrolINT-en.html">Activity Enrolment -Internal</a>
+                <a href="activityEnrolINT-en.html">Activity Enrolment -Internal (Sept 16)</a>
             </div>
-            <div class="row">
-                <a href="dossier/dossierEnrolINT-en.html">Dossier Enrolment Internal (Sept 20)</a>
-            </div>
+
         </div>
         <div>
             <row>
-                <h2>Summary of changes</h2>
+                <h2>Summary of changes for Sept 26</h2>
                 <ul>
-                    <li>Added File naming conventions</li>
-                    <li>Activity Form External: added Help page links (demo)</li>
-                    <li>Fixes to amendment behavior (company and Activity)</li>
-                    <li>Fix to xml generation, internal Activity Form </li>
-                    <li>Company Form: Fix to duplicate role Validation </li>
-                    <li>Company Form: Fix to country validation visibility behaviour</li>\
-                    <li>Re-added Dossier Form (Sept 20)</li>
-                    <li>Fixed French form links (Sept 20)</li>
+                    <li>Transaction form bug fixes (Read only bug, validation fix)</li>
+                    <li>Transaction form UI tweaks (panels)</li>
+                    <li>Dossier Formulations UI</li>
                 </ul>
             </row>
         </div>
@@ -195,7 +188,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-14</time>
+                <time property="dateModified">2016-09-27</time>
             </dd>
         </dl>
     </div>
