--- a/transactionEnrol-en.html
+++ b/transactionEnrol-en.html
@@ -158,7 +158,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-20 </time>
+                <time property="dateModified">2016-09-27 </time>
             </dd>
         </dl>
     </div>
@@ -225,6 +225,12 @@
 
 <!-- inject:js -->
 
+<script src="app/lib/xml2json.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/FileSaver.min.js"></script>
+
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -246,6 +252,8 @@
 <script src="app/scripts/transactionApp-en.js"></script>
 
 <script src="app/scripts/services/transactionService.js"></script>
+
+<script src="app/scripts/services/rep-contact-service.js"></script>
 
 <script src="app/scripts/services/filter-lists.js"></script>
 
