--- a/transactionEnrol-fr.html
+++ b/transactionEnrol-fr.html
@@ -156,7 +156,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-20 </time>
+                <time property="dateModified">2016-09-27 </time>
             </dd>
         </dl>
     </div>
@@ -227,6 +227,12 @@
 
 <!-- inject:js -->
 
+<script src="app/lib/xml2json.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/FileSaver.min.js"></script>
+
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -248,6 +254,8 @@
 <script src="app/scripts/transactionApp-fr.js"></script>
 
 <script src="app/scripts/services/transactionService.js"></script>
+
+<script src="app/scripts/services/rep-contact-service.js"></script>
 
 <script src="app/scripts/services/filter-lists.js"></script>
 
