--- a/dossier/dossierEnrolINT-en.html
+++ b/dossier/dossierEnrolINT-en.html
@@ -145,8 +145,8 @@
         <h1 property="name" id="wb-cont">Dossier Form for the Regulatory Enrolment Process (REP)</h1>
 
         <!-- inject:mainContent-->
-        <div class="container">
-    <cmp-dossier></cmp-dossier>
+        <div class="container" ng-app="dossierApp" ng-controller="MainController as ctrl">
+    <cmp-dossier form-type="{{ctrl.formType}}"></cmp-dossier>
 </div>
 
         <!-- endinject-->
@@ -159,7 +159,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-26 </time>
+                <time property="dateModified">2016-10-03 </time>
             </dd>
         </dl>
     </div>
@@ -226,12 +226,6 @@
 
 <!-- inject:js -->
 
-<script src="app/lib/xml2json.js"></script>
-
-<script src="app/lib/sha256.js"></script>
-
-<script src="app/lib/FileSaver.min.js"></script>
-
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -265,6 +259,8 @@
 <script src="app/services/data-lists.js"></script>
 
 <script src="app/services/application-info-service.js"></script>
+
+<script src="app/directives/numberOnly/only-digits.js"></script>
 
 <script src="app/components/therapeutic-classification/cmp-therapeutic-class.js"></script>
 
@@ -300,12 +296,6 @@
 
 <script src="app/components/formulations/cmp-active-ing-list.js"></script>
 
-<script src="app/components/fileIO/xml2json.js"></script>
-
-<script src="app/components/fileIO/sha256.js"></script>
-
-<script src="app/components/fileIO/FileSaver.min.js"></script>
-
 <script src="app/components/fileIO/FileIO.hpfbFileReader.js"></script>
 
 <script src="app/components/expanding-table/cmp-expanding-table.js"></script>
@@ -313,14 +303,6 @@
 <script src="app/components/drug-use/cmp-drug-use.js"></script>
 
 <script src="app/components/contactDetails/cmp-contact-details.js"></script>
-
-<script src="app/components/contact/cmp-contact-record.js"></script>
-
-<script src="app/components/contact/cmp-contact-list.js"></script>
-
-<script src="app/components/contact/cmp-contact-details.js"></script>
-
-<script src="app/components/contact/cmp-address-role.js"></script>
 
 <script src="app/components/checkbox-list/cmp-checkbox-list.js"></script>
 
@@ -341,6 +323,18 @@
 <script src="app/components/appendix-four/cmp-appendix-four-record.js"></script>
 
 <!-- endinject -->
+<!-- thirdParty:js  -->
+
+<script src="app/lib/FileSaver.min.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/ui-bootstrap-tpls-2.1.4.min.js"></script>
+
+<script src="app/lib/xml2json.js"></script>
+
+<!-- endinject -->
+
 
 </body>
 </html>
