--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont"> Regulatory Enrolment Process </h1>
+        <h1 property="name" id="wb-cont"> Regulatory Enrolment Process (Oct 3) </h1>
         <div>
             <h2> External User Links</h2>
             <div class="row">
@@ -155,7 +155,7 @@
                 <a href="activityEnrolEXT-en.html">Activity Enrolment -External (Sept 16)</a>
             </div>
             <div class="row">
-                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Sept 27)</a>
+                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Oct 3)</a>
             </div>
 
         </div>
@@ -172,11 +172,10 @@
         </div>
         <div>
             <row>
-                <h2>Summary of changes for Sept 26</h2>
+                <h2>Summary of changes for Oct 3</h2>
                 <ul>
-                    <li>Transaction form bug fixes (Read only bug, validation fix)</li>
-                    <li>Transaction form UI tweaks (panels)</li>
-                    <li>Dossier Formulations UI</li>
+                    <li>Dossier Error handling at field level for Drug Product and Appendix 4</li>
+                    <li>Dossier Appendix 4 UI Improvements</li>
                 </ul>
             </row>
         </div>
