--- a/activityEnrolINT-en.html
+++ b/activityEnrolINT-en.html
@@ -158,7 +158,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-27 </time>
+                <time property="dateModified">2016-10-06 </time>
             </dd>
         </dl>
     </div>
@@ -225,12 +225,6 @@
 
 <!-- inject:js -->
 
-<script src="app/lib/xml2json.js"></script>
-
-<script src="app/lib/sha256.js"></script>
-
-<script src="app/lib/FileSaver.min.js"></script>
-
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -271,12 +265,6 @@
 
 <script src="app/scripts/components/relatedActivityList/cmp-related-activity-list.js"></script>
 
-<script src="app/scripts/components/fileIO/xml2json.js"></script>
-
-<script src="app/scripts/components/fileIO/sha256.js"></script>
-
-<script src="app/scripts/components/fileIO/FileSaver.min.js"></script>
-
 <script src="app/scripts/components/fileIO/FileIO.hpfbFileReader.js"></script>
 
 <script src="app/scripts/components/relatedActivity/cmp-related-activity.js"></script>
@@ -296,6 +284,18 @@
 <script src="app/scripts/components/activityChangeType/cmp-activity-change.js"></script>
 
 <!-- endinject -->
+<!-- thirdParty:js  -->
+
+<script src="app/lib/FileSaver.min.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/ui-bootstrap-tpls-2.1.4.min.js"></script>
+
+<script src="app/lib/xml2json.js"></script>
+
+<!-- endinject -->
+
 
 </body>
 </html>
