--- a/activityEnrolINT-fr.html
+++ b/activityEnrolINT-fr.html
@@ -156,7 +156,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-27 </time>
+                <time property="dateModified">2016-10-06 </time>
             </dd>
         </dl>
     </div>
@@ -227,12 +227,6 @@
 
 <!-- inject:js -->
 
-<script src="app/lib/xml2json.js"></script>
-
-<script src="app/lib/sha256.js"></script>
-
-<script src="app/lib/FileSaver.min.js"></script>
-
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -273,12 +267,6 @@
 
 <script src="app/scripts/components/relatedActivityList/cmp-related-activity-list.js"></script>
 
-<script src="app/scripts/components/fileIO/xml2json.js"></script>
-
-<script src="app/scripts/components/fileIO/sha256.js"></script>
-
-<script src="app/scripts/components/fileIO/FileSaver.min.js"></script>
-
 <script src="app/scripts/components/fileIO/FileIO.hpfbFileReader.js"></script>
 
 <script src="app/scripts/components/relatedActivity/cmp-related-activity.js"></script>
@@ -298,7 +286,17 @@
 <script src="app/scripts/components/activityChangeType/cmp-activity-change.js"></script>
 
 <!-- endinject -->
+<!-- thirdParty:js  -->
 
+<script src="app/lib/FileSaver.min.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/ui-bootstrap-tpls-2.1.4.min.js"></script>
+
+<script src="app/lib/xml2json.js"></script>
+
+<!-- endinject -->
 
 </body>
 </html>
