--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <a href="transactionEnrol-en.html">Transaction Enrolment -External (sept 27)</a>
             </div>
             <div class="row">
-                <a href="activityEnrolEXT-en.html">Activity Enrolment -External (Sept 16)</a>
+                <a href="activityEnrolEXT-en.html">Activity Enrolment -External (Oct 6)</a>
             </div>
             <div class="row">
                 <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Oct 3)</a>
@@ -166,7 +166,7 @@
             </div>
 
             <div class="row">
-                <a href="activityEnrolINT-en.html">Activity Enrolment -Internal (Sept 16)</a>
+                <a href="activityEnrolINT-en.html">Activity Enrolment -Internal (Oct 6)</a>
             </div>
 
         </div>
@@ -176,6 +176,13 @@
                 <ul>
                     <li>Dossier Error handling at field level for Drug Product and Appendix 4</li>
                     <li>Dossier Appendix 4 UI Improvements</li>
+                </ul>
+            </row>
+            <row>
+                <h2>Summary of changes for Oct 6</h2>
+                <ul>
+                    <li>Fixed bug with adding more than Related Activiy</li>
+                    <li>Fixed bug with Related Activity date format</li>
                 </ul>
             </row>
         </div>
