Udpdates to load and save behaviour for Activity

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <a href="activityEnrolEXT-en.html">Activity Enrolment -External (Oct 6)</a>
             </div>
             <div class="row">
-                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Oct 3)</a>
+                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Oct 11)</a>
             </div>
 
         </div>
@@ -183,6 +183,13 @@
                 <ul>
                     <li>Fixed bug with adding more than Related Activiy</li>
                     <li>Fixed bug with Related Activity date format</li>
+                </ul>
+            </row>
+            <row>
+                <h2>Summary of changes for Oct 11</h2>
+                <ul>
+                    <li>Field level Validation for Dossier</li>
+                    <li>UI improvements for Dossier</li>
                 </ul>
             </row>
         </div>
