--- a/companyEnrolINT-en.html
+++ b/companyEnrolINT-en.html
@@ -158,7 +158,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-20 </time>
+                <time property="dateModified">2016-10-18 </time>
             </dd>
         </dl>
     </div>
@@ -255,14 +255,6 @@
 
 <script src="app/scripts/directives/numberOnly/only-digits.js"></script>
 
-<script src="app/scripts/components/addressRole/cmp-address-role.js"></script>
-
-<script src="app/scripts/components/fileIO/xml2json.js"></script>
-
-<script src="app/scripts/components/fileIO/sha256.js"></script>
-
-<script src="app/scripts/components/fileIO/FileSaver.min.js"></script>
-
 <script src="app/scripts/components/fileIO/FileIO.hpfbFileReader.js"></script>
 
 <script src="app/scripts/components/expandingTable/cmp-expanding-table.js"></script>
@@ -273,19 +265,33 @@
 
 <script src="app/scripts/components/contactList/cmp-company-contact-list.js"></script>
 
-<script src="app/scripts/components/companyMain/cmp-company-main.js"></script>
-
 <script src="app/scripts/components/contactDetails/cmp-contact-details.js"></script>
 
-<script src="app/scripts/components/addressRecord/cmp-address-record.js"></script>
+<script src="app/scripts/components/companyMain/cmp-company-main.js"></script>
 
 <script src="app/scripts/components/applicationInfo/cmp-application-info.js"></script>
 
-<script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
+<script src="app/scripts/components/addressRole/cmp-address-role.js"></script>
+
+<script src="app/scripts/components/addressRecord/cmp-address-record.js"></script>
 
 <script src="app/scripts/components/addressList/cmp-company-address-list.js"></script>
 
+<script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
+
 <!-- endinject -->
+<!-- thirdParty:js  -->
+
+<script src="app/lib/FileSaver.min.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/ui-bootstrap-tpls-2.1.4.min.js"></script>
+
+<script src="app/lib/xml2json.js"></script>
+
+<!-- endinject -->
+
 
 </body>
 </html>
