--- a/transactionEnrol-en.html
+++ b/transactionEnrol-en.html
@@ -158,7 +158,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-27 </time>
+                <time property="dateModified">2016-10-18 </time>
             </dd>
         </dl>
     </div>
@@ -225,12 +225,6 @@
 
 <!-- inject:js -->
 
-<script src="app/lib/xml2json.js"></script>
-
-<script src="app/lib/sha256.js"></script>
-
-<script src="app/lib/FileSaver.min.js"></script>
-
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -279,12 +273,6 @@
 
 <script src="app/scripts/components/lifecycleDetails/cmp-lifecycle-details.js"></script>
 
-<script src="app/scripts/components/fileIO/xml2json.js"></script>
-
-<script src="app/scripts/components/fileIO/sha256.js"></script>
-
-<script src="app/scripts/components/fileIO/FileSaver.min.js"></script>
-
 <script src="app/scripts/components/fileIO/FileIO.hpfbFileReader.js"></script>
 
 <script src="app/scripts/components/expandingTable/cmp-expanding-table.js"></script>
@@ -304,6 +292,18 @@
 <script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
 
 <!-- endinject -->
+<!-- thirdParty:js  -->
+
+<script src="app/lib/FileSaver.min.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/ui-bootstrap-tpls-2.1.4.min.js"></script>
+
+<script src="app/lib/xml2json.js"></script>
+
+<!-- endinject -->
+
 
 </body>
 </html>
