--- a/transactionEnrol-fr.html
+++ b/transactionEnrol-fr.html
@@ -156,7 +156,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-09-27 </time>
+                <time property="dateModified">2016-10-18 </time>
             </dd>
         </dl>
     </div>
@@ -227,12 +227,6 @@
 
 <!-- inject:js -->
 
-<script src="app/lib/xml2json.js"></script>
-
-<script src="app/lib/sha256.js"></script>
-
-<script src="app/lib/FileSaver.min.js"></script>
-
 <script src="app/lib/angular.min.js"></script>
 
 <script src="app/lib/angular-translate.min.js"></script>
@@ -281,12 +275,6 @@
 
 <script src="app/scripts/components/lifecycleDetails/cmp-lifecycle-details.js"></script>
 
-<script src="app/scripts/components/fileIO/xml2json.js"></script>
-
-<script src="app/scripts/components/fileIO/sha256.js"></script>
-
-<script src="app/scripts/components/fileIO/FileSaver.min.js"></script>
-
 <script src="app/scripts/components/fileIO/FileIO.hpfbFileReader.js"></script>
 
 <script src="app/scripts/components/expandingTable/cmp-expanding-table.js"></script>
@@ -306,7 +294,17 @@
 <script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
 
 <!-- endinject -->
+<!-- thirdParty:js  -->
 
+<script src="app/lib/FileSaver.min.js"></script>
+
+<script src="app/lib/sha256.js"></script>
+
+<script src="app/lib/ui-bootstrap-tpls-2.1.4.min.js"></script>
+
+<script src="app/lib/xml2json.js"></script>
+
+<!-- endinject -->
 
 </body>
 </html>
